Solved loop and wrap img

--- a/Practice HTML_CSS/src/stylesheets/pages/homepage.scss
+++ b/Practice HTML_CSS/src/stylesheets/pages/homepage.scss
@@ -501,7 +501,6 @@
         align-items: center;
         gap: 16px;
         padding: 12rem 16px 0;
-        background: url("/src/assets/icons/brand.svg") no-repeat center top;
         background-size: contain;
         width: 100%;
         max-width: 100%;
